--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pyasn1==0.4.8
 pycparser==2.20
 qbittorrent-api==2020.7.7
 requests==2.24.0
+# requests==2.24.0
 rsa==4.6
 six==1.15.0
 Telethon==1.20
@@ -33,4 +34,3 @@ lxml
 beautifulsoup4>=4.8.2,<4.8.10
 speedtest-cli
 megasdkrestclient
-requests
