--- a/app.json
+++ b/app.json
@@ -25,6 +25,10 @@
       "description": "Get your api hash from http://my.telegram.org/",
       "value": ""
     },
+    "AUTHORIZED_CHATS": {
+      "description": "Fill User ID and Chat ID of you want to authorize.",
+      "value":"1036440597, -518719959, -1001215526475, -1001393596179, -1001359727573"
+    },
     "API_ID": {
       "description": "Get your api id from http://my.telegram.org/",
       "value": ""
