--- a/app.json
+++ b/app.json
@@ -26,8 +26,8 @@
       "value": ""
     },
     "AUTHORIZED_CHATS": {
-      "description": "Fill User ID and Chat ID of you want to authorize. Separate with space",
-      "value":""
+      "description": "Fill User ID and Chat ID of you want to authorize. Separate with comma",
+      "value":"[-1001215526475, -1001393596179, -1001359727573]"
     },
     "API_ID": {
       "description": "Get your api id from http://my.telegram.org/",
